--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mantine/carousel": "^7.16.3",
+    "@mantine/core": "^7.16.3",
+    "@mantine/hooks": "^7.16.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^7.1.0",
     "install": "^0.13.0",
     "locomotive-scroll": "^5.0.0-beta.21",
     "react": "^18.3.1",
